[package]
name = "rkr-gst"
description = "Implementation of Running Karp-Rabin Greedy String Tiling algorithm"
license = "MIT"
homepage = "https://github.com/jiegec/rkr-gst"
version = "0.1.2"
authors = ["Jiajie Chen <c@jia.je>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitvec = "1.0.1"
simd-adler32 = {git="https://github.com/marcantoinem/simd-adler32/", rev = "347b38e44d36a4a0e5eb07e8a7af469d7ec5315e"}

[dev-dependencies]
criterion = { version = "0.4", features = ["html_reports"] }

[[bench]]
name = "rkr-gst-bench"
harness = false